# task_2

./: CMakeLists.txt  KA04_Shtrikker_DY_1_v8_12_09_2021.docx  KA04_Shtrikker_DY_1_v8_13_09_2021.docx
include/task_1/: competition.h  date.h  participant.h  performance.h
include/task_2/: competition.h  date.h  participant.h  performance.h
src/: competition.cpp  date.cpp  main.cpp  participant.cpp  performance.cpp
